--- a/index.html
+++ b/index.html
@@ -1,93 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML Intro</title>
-  </head>
-  <body>
+</head>
+<body>
     <div id="exercise1">
-      <!-- Complete Exercise 1 HERE -->
+        <header> This is a header </header>
+        <p> This is a paragraph </p><!-- Complete Exercise 1 HERE -->
     </div>
 
     <div id="exercise2">
-      <!-- Complete Exercise 2 HERE -->
+        <ul>
+            <li><a href="https://www.linkedin.com/in/coreyareid/"> Linkedin </a></li>
+            <li><a href="https://truecoders.io/?gclid=CjwKCAjwlqOXBhBqEiwA-hhitI9tJ2Nw4dKKJWElmw6RLPwvsDQE8lROSCtBHl5lcZsqYxZEWdBMQRoC5qIQAvD_BwE"> TrueCoders</a></li>
+            <li><a href="https://github.com/"> Most Visited </a></li>
+        </ul><!-- Complete Exercise 2 HERE -->
     </div>
 
     <div id="exercise3">
-      <!-- Complete Exercise 3 HERE -->
+        <img src="https://i.natgeofe.com/n/46b07b5e-1264-42e1-ae4b-8a021226e2d0/domestic-cat_thumb_square.jpg" alt="Cat Image" /><!-- Complete Exercise 3 HERE -->
     </div>
 
     <div id="exercise4">
-      <!-- Complete Exercise 4 HERE -->
-      <p>
-        I looked down at the board. "The point isn't to win?" I asked. "The
-        point," Bredon said grandly, "is to play a beautiful game." He lifted
-        his hands and shrugged, his face breaking into a beautific smile. "Why
-        would I want to win anything other than a beautiful game?"
-      </p>
+        <!-- Complete Exercise 4 HERE -->
+        <p>
+            I looked down at the board. "The <strong>point</strong> isn't to win?" I asked. "The
+            point," <span>Bredon</span> said grandly, "is to <u>play</u> a <em>beautiful</em> game." He lifted
+            his hands and shrugged, his face breaking into a beautific smile. "Why
+            would I want to win anything other than a beautiful game?"
+        </p>
     </div>
 
     <div id="exercise5">
-      <!-- Complete Exercise 5 HERE -->
-      <div>
+        <!-- Complete Exercise 5 HERE -->
         <div>
-          <div>
-            <span>
-              <a href="/">Home</a>
-            </span>
-            <span>
-              <a href="/about">About</a>
-            </span>
-            <span>
-              <a href="/projects">Projects</a>
-            </span>
-          </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="/about">About</a>
+                    </li>
+                    <li>
+                        <a href="/projects">Projects</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-      </div>
 
-      <div>
-        <div>
-          <h1>Main Heading</h1>
-          <p>Author.. Bio...</p>
-        </div>
-        <div>
-          <div>
-            <h2>Sub Heading</h2>
+        <main>
+            <section>
+                <h1>Main Heading</h1>
+                <p>Author.. Bio...</p>
+            </section>
+            <article>
+                <section>
+                    <h2>Sub Heading</h2>
+                    <div>
+                        <p>Lorem ipsum...</p>
+                    </div>
+                </section>
+                <section>
+                    <h2>Sub Heading</h2>
+                    <p>Lorem ipsum...</p>
+                    <div>
+                        <h3>Another Sub Heading</h3>
+                        <p>Lorem ipsum...</p>
+                    </div>
+                </section>
+            </article>
+        </main>
+
+        <footer>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="/privacy">Privacy Policy</a>
+                    </li>
+                    <li>
+                        <a href="/terms">Terms and Conditions</a>
+                    </li>
+                </ul>
+            </nav>
+
             <div>
-              <p>Lorem ipsum...</p>
+                <p>Powered by 🕯️</p>
+                <p>&copy; TrueCoders 2021-24</p>
             </div>
-          </div>
-          <div>
-            <h2>Sub Heading</h2>
-            <p>Lorem ipsum...</p>
-            <div>
-              <h3>Another Sub Heading</h3>
-              <p>Lorem ipsum...</p>
-            </div>
-          </div>
-        </div>
-	</div>
-
-      <div>
-        <div>
-          <div>
-            <span>
-              <a href="/privacy">Privacy Policy</a>
-            </span>
-            <span>
-              <a href="/terms">Terms and Conditions</a>
-            </span>
-          </div>
-        </div>
-
-        <div>
-          <p>Powered by 🕯️</p>
-          <p>&copy; TrueCoders 2021-24</p>
-        </div>
-      </div>
+        </footer>
     </div>
-	
-  </body>
+
+</body>
 </html>
